# food_store_gestion

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  AGENTS.md  COLOR_PALETTE.md  CONTEXTO_WEBSOCKET_TAREAS_2_1_2_4.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_COMPLETE.md  DESIGN_SYSTEM_INDEX.md  DESIGN_SYSTEM_VISUAL_EXAMPLES.md  EVALUACION_ARQUITECTONICA.md  GETTING-STARTED.md  README.md  START-HERE.md  STYLING_IMPLEMENTATION_SUMMARY.md  analysis_vs_spec.md  commitlint.config.js  docker-compose.yml  opencode.json  package-lock.json  package.json  skills-lock.json
backend/: .env.docker-example  .env.example  AGENTS.md  Dockerfile  alembic.ini  check_env.py  clean_db.py  debug_http_request.py  debug_realistic.py  debug_settings.py  debug_test.py  debug_uvicorn_test.py  full_test_results.txt  pyproject.toml  pytest.ini  requirements.txt  run_seeds.py  run_uvicorn.py  test_app_no_lifespan.py  test_db.py  test_db_connection.py  test_kds_results.txt  test_kitchen_results.txt  test_output.txt  test_register.py  test_register2.py  test_results.txt  test_results_final.txt
backend/alembic/: env.py
backend/alembic/versions/: 1b4b6e96df92_erd_v5_tables_catalogs.py  1c78cfd1cfce_initial_schema.py  20260508003720_add_fts_search_index.py  (+23 more)
backend/app/: config.py  dependencies.py  main.py
backend/database/: __init__.py  client.py  seeds.py  session.py
backend/tests/: conftest.py  test_auth_middleware.py  test_auth_routes.py  test_branch_service.py  test_cart.py  test_categories.py  test_category_service.py  test_dashboard_service.py  test_database.py  test_dependencies.py  test_direcciones_entrega.py  test_health.py  test_inventory.py  test_inventory_service.py  test_kitchen_kds.py  test_notification_service.py  test_notifications.py  test_order_fsm.py  test_orders.py  test_payment.py  test_payment_service.py  test_product_service.py  test_products.py  test_recommendations.py  test_reviews.py  test_search_endpoint.py  test_search_service.py  test_security_auth.py  test_security_jwt.py  test_security_password.py  test_seed.py  test_user_service.py  test_users_admin.py  test_users_preferences.py  test_users_profile.py  test_users_update.py  test_validation.py  test_wishlist.py
(+411 files in other folders)
